tests/baselines/reference/literals.errors.txt
literals.ts(8,10): error TS18050: The value 'null' cannot be used here.
literals.ts(8,17): error TS18050: The value 'null' cannot be used here.
literals.ts(9,9): error TS18050: The value 'undefined' cannot be used here.
literals.ts(9,21): error TS18050: The value 'undefined' cannot be used here.
literals.ts(19,9): error TS1121: Octal literals are not allowed. Use the syntax '0o1'.
literals.ts(24,9): error TS1121: Octal literals are not allowed. Use the syntax '-0o3'.


==== literals.ts (6 errors) ====
    //typeof null is Null
    //typeof true is Boolean
    //typeof false is Boolean
    //typeof numeric literal is Number
    //typeof string literal is String
    //typeof regex literal is Regex
    
    var nu = null / null;
             ~~~~
!!! error TS18050: The value 'null' cannot be used here.
                    ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    var u = undefined / undefined;
            ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
                        ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    
    var b: boolean;
    var b = true;
    var b = false;
    
    var n: number;
    var n = 1;
    var n = 1.0;
    var n = 1e4;
    var n = 001; // Error in ES5
            ~~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '0o1'.
    var n = 0x1;
    var n = -1;
    var n = -1.0;
    var n = -1e-4;
    var n = -003; // Error in ES5
            ~~~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '-0o3'.
    var n = -0x1;
    
    var s: string;
    var s = '';
    var s = "";
    var s = 'foo\
        bar';
    var s = "foo\
        bar";
    
    var r: RegExp;
    var r = /what/;
    var r = /\\\\/;
    